Fixed pagination overlap

--- a/packages/augur-ui/src/modules/common/pagination.styles.less
+++ b/packages/augur-ui/src/modules/common/pagination.styles.less
@@ -84,12 +84,13 @@
     section > button:first-of-type,
     section > button:last-of-type {
       display: block;
-      width: calc(@size-32 * 3);
+      width: calc(@size-32 * 2);
     }
 
     section > span {
       display: block;
       padding: 0 @size-16;
+      margin: auto 0;
     }
   }
 }
